--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,5 +10,5 @@ body {
   color: #000;
   padding: 0;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
 }
