--- a/frontend/src/pages/createEvent/index.css
+++ b/frontend/src/pages/createEvent/index.css
@@ -1,206 +1,251 @@
-.createWrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: auto;
-    gap: 1rem;
+.createWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+  gap: 1rem;
 }
 
-.createHeader{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.createHeader {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.createTitle{
-    font-size: 20px;
-    font-weight: 600;
-    color: #000;
+.createTitle {
+  font-size: 20px;
+  font-weight: 600;
+  color: #000;
 }
 
-.createDesc{
-    font-size: 16px;
-    font-weight: 400;
-    color: #000;
-    text-align: center;
+.createDesc {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000;
+  text-align: center;
 }
 
-.createBody{
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-template-columns: 3fr 2fr;
-    gap: 1rem;
+.createBody {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  gap: 1rem;
 }
 
-.createPreviewArea{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
+.createPreviewArea {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
 }
 
-.createBtn{
-    width: 100%;
-    height: 36px;
-    padding: 0;
-    background: var(--accent-color);
-    color: #fff;
-    border-radius: 8px;
-    font-size: 16px;
-    outline: none;
-    border: none;
-    cursor: pointer;
+.createBtn {
+  width: 100%;
+  height: 36px;
+  padding: 0;
+  background: var(--accent-color);
+  color: #fff;
+  border-radius: 8px;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
-.createBtn:hover{
-    opacity: 0.8;
+.createBtn:hover {
+  opacity: 0.8;
 }
 
-
-
-.createInputWrapper{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+.createInputWrapper {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.createInputSelectBoxs{
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
+.createInputSelectBoxs {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 8px;
 }
 
-.createLocationArea{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1rem;
+.createLocationArea {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1rem;
 }
 
-.createLocationPricesAndPreview{
-    width: 100%;
-    height: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
+.createLocationPricesAndPreview {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 8px;
 }
 
-.createLocationPreview{
-    border: 1px solid var(--button-color);
-    border-radius: 8px;
-    padding: 8px;
-    width: calc(100% - 16px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+.createLocationPrices {
+  border: 1px solid var(--button-color);
+  border-radius: 8px;
+  padding: 8px;
+  width: calc(100% - 16px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.createLocationPreviewTitle{
-    width: 50%;
-    border: 1px solid #000;
-    border-radius: 4px;
-    padding: 4px;
-    text-align: center;
+.createLocationPreview {
+  border: 1px solid var(--button-color);
+  border-radius: 8px;
+  padding: 8px;
+  width: calc(100% - 16px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.createLocationPreviewContent{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #000;
-    border-radius: 4px;
-    margin-top: 8px;
-    overflow: hidden;
+.createLocationPreviewTitle {
+  width: 50%;
+  border: 1px solid #000;
+  border-radius: 4px;
+  padding: 4px;
+  text-align: center;
 }
 
-.createLocationPreviewContentItem{
-    height: 33%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.createLocationPreviewContent {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #000;
+  border-radius: 4px;
+  margin-top: 8px;
+  overflow: hidden;
 }
 
-.createLocationPreviewContentItem:nth-child(2){
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
+.createLocationPreviewContentItem {
+  height: 33%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.createLocationPreviewContentItem span{
-    font-size: 14px;
-    font-weight: 400;
-    color: #000;
+.createLocationPreviewContentItem:nth-child(2) {
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
 }
 
-.createPreviewImage{
-    width: 100%;
-    height: auto;
-    min-height: 175px;
-    max-height: 250px;
-    position: relative;
+.createLocationPreviewContentItem span {
+  font-size: 14px;
+  font-weight: 400;
+  color: #000;
 }
 
-
-
-
-.upload-message{
-    height: 100%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    background: #e1e0e0;
+.createPreviewImage {
+  width: 100%;
+  height: auto;
+  min-height: 175px;
+  max-height: 250px;
+  position: relative;
 }
 
-
-
-.createPreviewLogoBox{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+.upload-message {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background: #e1e0e0;
 }
 
-.createPreviewLogoBoxIcon{
-    color: var(--accent-color);
-    width: 24px;
-    height: 24px;
+.createPreviewLogoBox {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.createPreviewLogoActive{
+.createPreviewLogoBoxIcon {
+  color: var(--accent-color);
+  width: 24px;
+  height: 24px;
+}
+
+.createPreviewLogoActive {
   width: 100%;
   height: 100%;
   position: relative;
 }
 
-.createPreviewLogoActive img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    aspect-ratio: 16/9;
-    cursor: pointer;
+.createPreviewLogoActive img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+  aspect-ratio: 16/9;
+  cursor: pointer;
 }
 
+.createLocationPreviewTheatreItem {
+  height: 33%;
+  width: 95%;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 4px;
+  margin: 4px 0;
+}
+
+.createLocationPreviewTheatreItem span {
+  font-size: 14px;
+  font-weight: 400;
+  color: #000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #000;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+
+
+@media only screen and (max-width: 1000px){
+  .createBody{
+    grid-template-columns: 1fr;
+  }
+  .createWrapper{
+    margin-bottom: 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px){
+  .createLocationPricesAndPreview{
+    grid-template-columns: 1fr;
+  }
+  .createLocationPreviewContent{
+    min-height: 240px;
+  }
+}
