frontend | web3storage added for image file

--- a/frontend/src/pages/createEvent/index.css
+++ b/frontend/src/pages/createEvent/index.css
@@ -59,6 +59,11 @@
   outline: none;
   border: none;
   cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
 }
 
 .createBtn:hover {
