--- a/frontend/src/pages/buyEvent/index.css
+++ b/frontend/src/pages/buyEvent/index.css
@@ -240,7 +240,9 @@
   bottom: 8px;
   background: var(--accent-color);
   color: #fff;
-  width: 70px;
+  width: auto;
+  min-width: 75px;
+  padding: 1px 4px;
   height: 24px;
   border-radius: 8px;
   font-size: 14px;
