--- a/frontend/src/pages/myTickets/index.css
+++ b/frontend/src/pages/myTickets/index.css
@@ -202,6 +202,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
 }
 
 .ant-qrcode{
@@ -214,6 +215,22 @@
 .ant-qrcode canvas{
   width: 90% !important;
   height: 90% !important;
+}
+
+.qrModalTimer{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.qrModalTimerText{
+  font-size: 16px;
+  font-weight: 500;
+  color: #000;
 }
 
 @media only screen and (max-width: 768px) {
