--- a/frontend/src/pages/buyEvent/index.css
+++ b/frontend/src/pages/buyEvent/index.css
@@ -205,7 +205,7 @@
   border-radius: 8px;
   border: 1px solid var(--button-color);
   outline: none;
-  background: none;
+  background: var(--box-color);
   font-size: 16px;
   font-weight: 400;
   color: #000;
@@ -306,16 +306,17 @@
 }
 
 .eventStageStep2Buttons button:nth-child(1) {
-  background: none;
+  background: var(--box-color);
   border: 1px solid var(--accent-color);
   color: #000;
 }
 
 
 .eventBuySeat span{
-  width: 40px;
+  width: 100%;
   height: 32px;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .eventSeatInfo{
