--- a/frontend/src/pages/createEvent/index.css
+++ b/frontend/src/pages/createEvent/index.css
@@ -101,37 +101,42 @@
   height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 8px;
+  gap: 12px;
 }
 
 .createLocationPrices {
-  border: 1px solid var(--button-color);
+  /* border: 1px solid var(--button-color); */
   border-radius: 8px;
-  padding: 8px;
-  width: calc(100% - 16px);
+  padding: 8px 0;
+  width:100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  /* background: var(--box-color); */
 }
 
 .createLocationPreview {
-  border: 1px solid var(--button-color);
+  /* border: 1px solid var(--button-color); */
   border-radius: 8px;
-  padding: 8px;
-  width: calc(100% - 16px);
+  padding: 8px 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  /* background: var(--box-color); */
+
 }
 
 .createLocationPreviewTitle {
-  width: 50%;
+  width:auto;
+  min-width: 50%;
   border: 1px solid #000;
   border-radius: 4px;
   padding: 4px;
   text-align: center;
+  background: var(--box-color);
 }
 
 .createLocationPreviewContent {
@@ -145,6 +150,9 @@
   border-radius: 4px;
   margin-top: 8px;
   overflow: hidden;
+  background: var(--box-color);
+
+
 }
 
 .createLocationPreviewContentItem {
@@ -162,7 +170,7 @@
 
 .createLocationPreviewContentItem span {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   color: #000;
 }
 
@@ -181,6 +189,7 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  aspect-ratio: 16/9;
   background: #e1e0e0;
 }
 
@@ -219,13 +228,21 @@
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 4px;
+  gap: 6px;
   margin: 4px 0;
 }
 
+.createLocationPreviewTheatreItem:nth-child(1){
+  margin-top: 8px;
+}
+.createLocationPreviewTheatreItem:nth-child(3){
+  margin-bottom: 8px;
+}
+
+
 .createLocationPreviewTheatreItem span {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   color: #000;
   display: flex;
   align-items: center;
@@ -233,6 +250,11 @@
   border: 1px solid #000;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
+}
+
+.createPreviewTitle{
+  margin-bottom: -14px;
+  width: 100%;
 }
 
 
