--- a/frontend/src/pages/home/index.css
+++ b/frontend/src/pages/home/index.css
@@ -64,7 +64,7 @@
 }
 
 .homeEventCard {
-  border: 1px solid var(--button-color);
+  border: 1px solid #868484;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -80,11 +80,13 @@
   width: 100%;
   height: auto;
   aspect-ratio: 16/9;
+  object-fit: cover;
+
 }
 
 .homeEventCategoryColor {
   width: 100%;
-  height: 6px;
+  height: 8px;
   background: #000;
 }
 
@@ -96,6 +98,7 @@
   width: calc(100% - 16px);
   padding: 8px;
   gap: 4px;
+  background: var(--box-color);
 }
 
 .homeEventCardInfoTop {
