--- a/frontend/src/pages/myTickets/index.css
+++ b/frontend/src/pages/myTickets/index.css
@@ -149,7 +149,7 @@
 }
 
 .myTicketsCardRight::after {
-  bottom: -12px;
+  bottom: -16px;
 }
 
 .myTicketsCardItem {
@@ -180,19 +180,16 @@
   text-decoration: none;
   position: absolute;
   right: 16px;
-  bottom: 12px;
-}
-.goEvenetIcon{
-  width: 24px;
-  height: auto;
-  color: #000;
-  cursor: pointer;
-}
-
-.goEvenetIcon:hover{
+  bottom:16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  font-weight: 500;
   color: var(--accent-color);
-
 }
+
+
 
 .qrModal{
 
@@ -206,16 +203,16 @@
 }
 
 .ant-qrcode{
-  width: 250px !important;
-  height: 250px !important;
+  width: auto !important;
+  height: 150px !important;
   border: none !important;
   padding: 0;
 }
 
-.ant-qrcode canvas{
-  width: 90% !important;
-  height: 90% !important;
-}
+/* .ant-qrcode canvas{
+  width: 200px !important;
+  height: 200px !important;
+} */
 
 .qrModalTimer{
   width: 100%;
