--- a/frontend/src/ui/textarea/index.css
+++ b/frontend/src/ui/textarea/index.css
@@ -6,7 +6,7 @@
   border-radius: 8px;
   border: 1px solid var(--button-color);
   outline: none;
-  background: none;
+  background: var(--box-color);
   font-size: 16px;
   font-weight: 400;
   color: #000;
