--- a/frontend/src/components/header/index.css
+++ b/frontend/src/components/header/index.css
@@ -35,6 +35,7 @@
   font-size: 1.5rem;
   font-weight: 700;
   color: #000;
+  font-family: 'Merriweather', serif !important;
 }
 
 .headerLogo span b{
