--- a/frontend/src/pages/verify/index.css
+++ b/frontend/src/pages/verify/index.css
@@ -18,27 +18,39 @@
 .myTicketsCardIcon {
   margin-top: 1px;
 }
-.myTicketsCardLeft {
+.buttonVerify {
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
-  width: calc(100% - 8px);
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 4px;
-  padding-right: 8px;
+  /* padding-right: 8px; */
 }
 
-.myTicketsCardLeft img {
+.buttonVerify img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   aspect-ratio: 16 / 9;
   border-radius: 4px;
 }
-
+.buttonVerify button {
+  width: 100%;
+  height: auto;
+  padding: 8px 0;
+  border-radius: 4px;
+  background: var(--button-color);
+  outline: none;
+  border: none;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  cursor: pointer;
+}
 .myTicketWrapper {
   display: flex;
   flex-direction: row;
