--- a/frontend/src/pages/verify/index.css
+++ b/frontend/src/pages/verify/index.css
@@ -210,13 +210,16 @@
   min-height: 20px;
 }
 
+.verifyEventLocationPart {
+  width: 30%;
+}
 .verifyEventCardLocation {
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 4px;
 }
 
